--- a/example/origin/mix/templates/es-svc-headless.yaml
+++ b/example/origin/mix/templates/es-svc-headless.yaml
@@ -4,7 +4,8 @@ metadata:
   name: es-{{ .Values.cluster.id }}-headless
   namespace: {{ .Release.Namespace }}
   labels:
-    app: elasticsearch
+    app.kubernetes.io/instance: {{ .Values.cluster.id }}
+    app.kubernetes.io/name: elasticsearch
     statefulset-name: {{ .Values.cluster.id }}-nodes
 spec:
   ports:
@@ -14,5 +15,6 @@ spec:
       targetPort: 9200
   clusterIP: None
   selector:
+    app.kubernetes.io/instance: {{ .Values.cluster.id }}
+    app.kubernetes.io/name: elasticsearch
     statefulset-name: {{ .Values.cluster.id }}-nodes
-    app: elasticsearch
