--- a/example/origin/es-release.yaml
+++ b/example/origin/es-release.yaml
@@ -185,7 +185,7 @@ spec:
               topologyKey: kubernetes.io/hostname
       initContainers:
         - name: fix-permissions
-          image: busybox
+          image: "docker.elastic.co/elasticsearch/elasticsearch:7.14.2"
           imagePullPolicy: IfNotPresent
           command: ["sh", "-c", "chown -R 1000:1000 /usr/share/elasticsearch/data"]
           securityContext:
@@ -194,13 +194,13 @@ spec:
             - name: es-data
               mountPath: /usr/share/elasticsearch/data
         - name: increase-vm-max-map
-          image: busybox
+          image: "docker.elastic.co/elasticsearch/elasticsearch:7.14.2"
           imagePullPolicy: IfNotPresent
           command: ["sysctl", "-w", "vm.max_map_count=262144"]
           securityContext:
             privileged: true
         - name: increase-fd-ulimit
-          image: busybox
+          image: "docker.elastic.co/elasticsearch/elasticsearch:7.14.2"
           imagePullPolicy: IfNotPresent
           command: ["sh", "-c", "ulimit -n 655360"]
           securityContext:
